Git_WGBH_QC/src/objects/Address__c.object
<CustomObject>
    <fields>
        <fullName>Account_Household__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Create_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <inlineHelpText>Date new address was created or date they moved to this new address</inlineHelpText>
        <label>Address Create Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Address_End_Date__c</fullName>
        <description>Date they moved from this address or address is no longer valid</description>
        <inlineHelpText>Date they moved from this address or address is no longer valid</inlineHelpText>
        <label>Address End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Address_Status__c</fullName>
        <inlineHelpText>Select where the address is active or inactive, add the end date if they have moved or it becomes inactive.  If the address is undeliverable do not pull for mailings, exclude this value.</inlineHelpText>
        <label>Address Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Old Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undeliverable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seasonal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing &amp; Shipping Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <defaultValue>&quot;USA&quot;</defaultValue>
        <label>Country</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Perferred_String__c</fullName>
        <formula>IF( Account_Household__r.Preferred_Address__r.Id = Id, &apos;Y&apos;, &apos;N&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Perferred String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code_5digit__c</fullName>
        <formula>LEFT(Postal_Code__c,5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postal Code 5digit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreferredAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PreferredAddress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seasonal_End_Date__c</fullName>
        <inlineHelpText>MMDD format</inlineHelpText>
        <label>Seasonal Address End Date</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seasonal_Start_Date__c</fullName>
        <inlineHelpText>MMDD Format</inlineHelpText>
        <label>Seasonal Address Start Date</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_1__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Street_2__c</fullName>
        <inlineHelpText>This would be additional mailing information for delivery for ex. C/O or 3rd floor Suite 107</inlineHelpText>
        <label>Address Additional Line</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TAAddressId__c</fullName>
        <externalId>true</externalId>
        <label>TA Address Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Undeliverable_Count__c</fullName>
        <label>Undeliverable Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>batch_process_count__c</fullName>
        <description>This field is used for Apex batch processing for post processing ETL information</description>
        <label>Batch Process Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bulk_load__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ETL migration process</description>
        <label>bulk_load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPreferred__c</fullName>
        <formula>IF( Account_Household__r.Preferred_Address__r.Id = Id, IMAGE(&apos;/img/checkbox_checked.gif&apos;, &apos;YES&apos;), IMAGE(&apos;/img/checkbox_unchecked.gif&apos;, &apos;NO&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preferred</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>specific_use_1__c</fullName>
        <description>TA Specific Use Code</description>
        <label>Specific Use 1</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>specific_use_2__c</fullName>
        <label>Specific Use 2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>specific_use_3__c</fullName>
        <label>Specific Use 3</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tempPreferred__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When mailing to a contact and not to the household use the preferred address indicated by this check box.  Please check to see if there is a seasonal address which may take priority over the preferred address if you are mailing a guide or a premium.</inlineHelpText>
        <label>Contact Preferred Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tmp_related_to__c</fullName>
        <description>Temporary ETL value relating which object to lookup. Household, or Contact</description>
        <label>tmp_related_to</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Address</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Household__c</columns>
        <columns>Address_Status__c</columns>
        <columns>Address_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Address Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>Account_00NT0000001NG2mMAG</fullName>
        <active>true</active>
        <field>Account.Preferred_Address__c</field>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>Address__c.Account_Household__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Account_Preferred Address</name>
        <sourceObject>Account</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>Contact_00NT0000001G0dWMAS</fullName>
        <active>true</active>
        <field>Contact.Preferred_Address__c</field>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>Address__c.Contact__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Contact_Preferred Address</name>
        <sourceObject>Contact</sourceObject>
    </namedFilters>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>